    * decode more recurrence mapi elements.
    * change some interfaces to be thread safe.
    * readpst changes for parallel operation on multi processor machines.
    * remove readpstlog - the debug log files are now plain ascii. Add locking
      if needed so parallel jobs can produce debug logs.
    * more cleanup of the shared library interface, but still not fully
      thread safe.

LibPST 0.6.37 (2009-04-17)
===============================
    * add pst_attach_to_mem() back into the shared library interface.
    * improve developer documentation.
    * fix memory leak caught by valgrind.

LibPST 0.6.36 (2009-04-14)
===============================
    * spec file cleanup with multiple sub packages.
    * add doxygen devel-doc documentation for the shared library.
    * switch back to fully versioned subpackage dependencies.
    * more cleanup on external names in the shared object file.

LibPST 0.6.35 (2009-04-08)
===============================
    * fix bug where we failed to pickup the last extended attribute.
    * patch from Emmanuel Andry to fix potential security bug in
      pst2dii with printf(err).
    * properly add trailing mime boundary in all modes.
    * move version-info into main configure.in, and set it properly
    * prefix all external symbols in the shared library with pst_ to
      avoid symbol clashes with other shared libraries.
    * new debianization from hggdh.
    * build separate libpst, libpst-libs, libpst-devel rpms.
    * remove many functions from the interface by making them static.

LibPST 0.6.34 (2009-03-19)
===============================
    * improve consistency checking when fetching items from the pst file.
    * avoid putting mixed item types into the same output folder.

LibPST 0.6.33 (2009-03-17)
===============================

    * fix fedora 11 type mismatch warning (actually an error in this case).
    * fix large file support, some sytems require config.h to be included
      earlier in the compilation.