@@ -18,10 +18,6 @@
 #include "vbuf.h"
 
 
-#ifdef HAVE_TIME_H
-    #include <time.h>
-#endif
-
 #ifdef HAVE_STRING_H
     #include <string.h>
 #endif
